tests/tests/neg/error_messages/wf/invalid_prim_app.rs
use flux_rs::attrs::*;

#[spec(fn () ensures [<<](1, 2) == [<<](1, 2))]
pub fn test() {}
